FEAT : 이미지 필요 or 다른 domain필요한 API 임시 작성